# fantasy-tavern-maker_rust_msa_wasm

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build  run
.cargo/: config.toml
content/css/: app.css  index.css  version.css
content/templates/: index.html  version.html
src/: dice_bag.rs  enums.rs  fns.rs  functions.rs  launch_pad.rs  main.rs  structs.rs
src/dicebag/: mod.rs
src/fantasy_npc/: mod.rs
src/fns/: enums.rs
src/npc/: enums.rs  implementations.rs  launch_pad.rs  main.rs  structs.rs  traits.rs
src/npc_maker/: mod.rs
src/tavern/: enums.rs  functions.rs  implementations.rs  launch_pad.rs  main.rs  structs.rs  traits.rs
templates/: version.html
