[package]
name = "fantasy-tavern-maker_rust_msa_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
is-vowel = "0.1.0"
rand = "0.8.5"
rand_derive2 = "0.1.21"
random = "0.14.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
tracing = "0.1.40"
variant_count = "1.1.0"
