[package]
name = "fantasy-tavern-maker_rust_msa_wasm"
edition = "2021"
version = "0.6.0"

[[bin]]
name = "npc"
path = "src/npc/main.rs"

[[bin]]
name = "tavern"
path = "src/tavern/main.rs"

[dependencies]
Inflector = "0.11.4"
is-vowel = "0.1.0"
markdown = "1.0.0-alpha.18"
rand = "0.8.5"
rand_derive2 = "0.1.21"
random = "0.14.0"
rocket = { version = "0.5.1", features=["json"]}
serde = "1.0.203"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
tera = "1.20.0"
tracing = "0.1.40"
variant_count = "1.1.0"

## --- end of file ---
